deploy/kubernetes/production/jobs-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locg-jobs-service
  namespace: locg-prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: locg-jobs-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: locg-jobs-service
    spec:
      containers:
        - name: locg-jobs-service
          image: 696215560370.dkr.ecr.eu-central-1.amazonaws.com/game-backend-production/jobs-service:production-730a5652
          imagePullPolicy: 'Always'
