deploy/kubernetes/production/locg-rest-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locg-rest-api
  namespace: locg-prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: locg-rest-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: locg-rest-api
    spec:
      containers:
        - name: locg-rest-api
          image: '696215560370.dkr.ecr.eu-central-1.amazonaws.com/go-rest-api:dev'
          ports:
            - name: ws-locg
              containerPort: 8080
