deploy/kubernetes/production/locg-service-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locg-service
  namespace: locg-prod
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: locg-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: locg-service
    spec:
      containers:
        - name: locg-service
          image: 696215560370.dkr.ecr.eu-central-1.amazonaws.com/game-backend-production:production-730a5652
          ports:
            - name: ws-locg
              containerPort: 8080
